@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.5rc2
 
+        - Fl_Pack didn't draw child widget labels the same way
+          as Fl_Group, causing display problems (STR #360)
         - fl_read_image() didn't work when reading from an
           offscreen buffer with some X11 servers (STR #364)
 
